convert project to use gradle and add fxml file
not yet finished

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ out/
 .gitignore
 __pycache__
 .DS_Store
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
